Locked zooming and changed styling of close button for add set popup. Fixed leftover space when zooming out on mobile.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,12 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .add-set-input {
     margin: 2px;
 }
@@ -23,6 +32,15 @@
 
 .bootstrap-select.btn-group .btn .filter-option {
     text-align: right;
+}
+
+.close {
+    color: #ffffff;
+    text-shadow: 0 1px 0 #000000;
+}
+
+.close span {
+    padding-right: 4px;
 }
 
 .container-fluid>.navbar-collapse {
